# Proj_vendas

./: .env  Apresentacao_Analise_Vendas.pptx  README.md  pyproject.toml  test_conn.py
data/: Superstore_dados_limpos.csv  US_Superstore_data.xls
scripts/: SQL.md  vendas.ipynb  vendas.sql
scripts/data/: Superstore_dados_limpos.xlsx
